# smodelconverter

./: .gitignore  Assimp2SModel.cpp  Assimp2SModel.h  CMakeLists.txt  Fbx2SModel.cpp  Fbx2SModel.h  LICENSE  README.md  ReadSModel.cpp  ReadSModel.h  SAnimData.h  SModelData.h  WriteSModel.cpp  WriteSModel.h  main.cpp  modeldata.h  readwriteSModel.cpp  readwriteSModel.h
util/: Fbx2Raw.cpp  Fbx2Raw.hpp  FbxBlendShapesAccess.cpp  FbxBlendShapesAccess.hpp  FbxLayerElementAccess.hpp  FbxMaterialInfo.hpp  FbxMaterialsAccess.cpp  FbxMaterialsAccess.hpp  FbxRoughMetMaterialInfo.cpp  FbxRoughMetMaterialInfo.hpp  FbxSkinningAccess.cpp  FbxSkinningAccess.hpp  FbxTraditionalMaterialInfo.cpp  FbxTraditionalMaterialInfo.hpp  File_Utils.cpp  RawModel.cpp  RawModel.hpp
